syntax = "proto3";

package dictionary;
option go_package = "https://github.com/Hexfall/DISYSExam;dictionary";

service DictionaryService {
    // Client methods.
    rpc Put(PutMessage) returns (SuccessMessage);
    rpc Get(GetMessage) returns (ValueMessage);
    // Client and Replica methods.
    rpc GetLeader(VoidMessage) returns (LeaderMessage);
    rpc GetReplicas(VoidMessage) returns (ReplicaListMessage);
    // Replica methods.
    rpc HeartBeat(VoidMessage) returns (VoidMessage);
    // Sub-replica methods.
    rpc Join(IpMessage) returns (VoidMessage);
    // Leader-replica methods.
    rpc SendReplicas(ReplicaListMessage) returns (VoidMessage);
    rpc SendValue(PutMessage) returns (VoidMessage);
    rpc SendValues(PutAllMessage) returns (VoidMessage);
}

message VoidMessage {}

message PutMessage {
    int32 key = 1;
    int32 value = 2;
}

message PutAllMessage {
    repeated PutMessage values = 1;
}

message GetMessage {
    int32 key = 1;
}

message ValueMessage {
    int32 value = 1;
}

message SuccessMessage {
    bool success = 1;
}

message IpMessage {
    string ip = 1;
}

message LeaderMessage {
    string ip = 1;
    bool isLeader = 2;
}

message ReplicaListMessage {
    repeated string ips = 1;
}